deploy: 645e395643bc5cdd7f380e20b28ea339d57ed6a8

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
       <li onclick="filterCategory('All Games')">All Games</li>
-      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Strategy')">Strategy</li><li onclick="filterCategory('Simulation')">Simulation</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Psychological')">Psychological</li><li onclick="filterCategory('Psyhological')">Psyhological</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Adventure')">Adventure</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
+      <li onclick="filterCategory('Action')">Action</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Strategy')">Strategy</li><li onclick="filterCategory('Simulation')">Simulation</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Puzzle')">Puzzle</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Casual')">Casual</li><li onclick="filterCategory('Driving')">Driving</li><li onclick="filterCategory('Clicker')">Clicker</li><li onclick="filterCategory('Psychological')">Psychological</li><li onclick="filterCategory('Arcade')">Arcade</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Adventure')">Adventure</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
     </ul>
   </div>
   <div id="sidebarIndicator"></div>
@@ -1869,6 +1869,21 @@
     <div class="card-title">Dunk Shot</div>
   </div>
           </div>
+        </div><div class="category" data-category="Psychological">
+          <h2>Psychological</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Bloodmoney " data-name="bloodmoney " onclick="prepareGame('Bloodmoney%20','Bloodmoney%20','games/Bloodmoney /thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
+      <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney ">
+    </div>
+    <div class="card-title">Bloodmoney </div>
+  </div><div class="card game-card" data-index="1" data-folder="Bloodmoney 2" data-name="bloodmoney 2" onclick="prepareGame('Bloodmoney%202','Bloodmoney%202','games/Bloodmoney 2/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2">
+    </div>
+    <div class="card-title">Bloodmoney 2</div>
+  </div>
+          </div>
         </div><div class="category" data-category="Clickers">
           <h2>Clickers</h2>
           <div class="grid">
@@ -1917,26 +1932,6 @@
       <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5">
     </div>
     <div class="card-title">BTD5</div>
-  </div>
-          </div>
-        </div><div class="category" data-category="Psychological">
-          <h2>Psychological</h2>
-          <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Bloodmoney " data-name="bloodmoney " onclick="prepareGame('Bloodmoney%20','Bloodmoney%20','games/Bloodmoney /thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-      <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney ">
-    </div>
-    <div class="card-title">Bloodmoney </div>
-  </div>
-          </div>
-        </div><div class="category" data-category="Psyhological">
-          <h2>Psyhological</h2>
-          <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Bloodmoney 2" data-name="bloodmoney 2" onclick="prepareGame('Bloodmoney%202','Bloodmoney%202','games/Bloodmoney 2/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
-      <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2">
-    </div>
-    <div class="card-title">Bloodmoney 2</div>
   </div>
           </div>
         </div><div class="category" data-category="2 Player">
