deploy: c5ec9c52d93dfadda6fa30915fb0018236471def

--- a/index.html
+++ b/index.html
@@ -1844,6 +1844,26 @@
     <div class="card-title">CS Go Clicker</div>
   </div>
           </div>
+        </div><div class="category" data-category="Psychological">
+          <h2>Psychological</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Bloodmoney " data-name="bloodmoney " onclick="prepareGame('Bloodmoney%20','Bloodmoney%20','games/Bloodmoney /thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
+      <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney ">
+    </div>
+    <div class="card-title">Bloodmoney </div>
+  </div><div class="card game-card" data-index="1" data-folder="Bloodmoney 2" data-name="bloodmoney 2" onclick="prepareGame('Bloodmoney%202','Bloodmoney%202','games/Bloodmoney 2/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2">
+    </div>
+    <div class="card-title">Bloodmoney 2</div>
+  </div><div class="card game-card" data-index="2" data-folder="Hungry Lamu" data-name="hungry lamu" onclick="prepareGame('Hungry%20Lamu','Hungry%20Lamu','games/Hungry Lamu/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+      <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu">
+    </div>
+    <div class="card-title">Hungry Lamu</div>
+  </div>
+          </div>
         </div><div class="category" data-category="Shooter">
           <h2>Shooter</h2>
           <div class="grid">
@@ -1872,21 +1892,6 @@
       <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot">
     </div>
     <div class="card-title">Dunk Shot</div>
-  </div>
-          </div>
-        </div><div class="category" data-category="Psychological">
-          <h2>Psychological</h2>
-          <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Bloodmoney " data-name="bloodmoney " onclick="prepareGame('Bloodmoney%20','Bloodmoney%20','games/Bloodmoney /thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-      <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney ">
-    </div>
-    <div class="card-title">Bloodmoney </div>
-  </div><div class="card game-card" data-index="1" data-folder="Bloodmoney 2" data-name="bloodmoney 2" onclick="prepareGame('Bloodmoney%202','Bloodmoney%202','games/Bloodmoney 2/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
-      <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2">
-    </div>
-    <div class="card-title">Bloodmoney 2</div>
   </div>
           </div>
         </div><div class="category" data-category="Clickers">
