--- a/index.html
+++ b/index.html
@@ -1031,9 +1031,9 @@
       <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict">
     </div>
     <div class="card-title">Ages of Conflict</div>
-  </div><div class="card game-card" data-index="4" data-folder="Angry Birds " data-name="angry birds " onclick="prepareGame('Angry%20Birds%20','Angry%20Birds%20','games/Angry Birds /thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Angry Birds /thumbnail.png')">
-      <img class="thumb" src="games/Angry Birds /thumbnail.png" alt="Angry Birds ">
+  </div><div class="card game-card" data-index="4" data-folder="Angry Birds " data-name="angry birds " onclick="prepareGame('Angry%20Birds%20','Angry%20Birds%20','games/Angry Birds /thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Angry Birds /thumbnail.jpg')">
+      <img class="thumb" src="games/Angry Birds /thumbnail.jpg" alt="Angry Birds ">
     </div>
     <div class="card-title">Angry Birds </div>
   </div><div class="card game-card" data-index="5" data-folder="BTD5" data-name="btd5" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.jpg')">
@@ -1485,9 +1485,9 @@
       <div class="category" data-category="Uncategorized">
           <h2>Uncategorized</h2>
           <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Angry Birds " data-name="angry birds " onclick="prepareGame('Angry%20Birds%20','Angry%20Birds%20','games/Angry Birds /thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Angry Birds /thumbnail.png')">
-      <img class="thumb" src="games/Angry Birds /thumbnail.png" alt="Angry Birds ">
+            <div class="card game-card" data-index="0" data-folder="Angry Birds " data-name="angry birds " onclick="prepareGame('Angry%20Birds%20','Angry%20Birds%20','games/Angry Birds /thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Angry Birds /thumbnail.jpg')">
+      <img class="thumb" src="games/Angry Birds /thumbnail.jpg" alt="Angry Birds ">
     </div>
     <div class="card-title">Angry Birds </div>
   </div><div class="card game-card" data-index="1" data-folder="Bad Time Simulator" data-name="bad time simulator" onclick="prepareGame('Bad%20Time%20Simulator','Bad%20Time%20Simulator','games/Bad Time Simulator/thumbnail.jpg')">
