--- a/index.html
+++ b/index.html
@@ -1469,6 +1469,11 @@
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
     <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
+  </div><div class="card game-card" data-index="91" data-folder="Vapmpire Survivors" data-name="vapmpire survivors" onclick="window.location.href='Vapmpire Survivors.html'">
+    <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+      <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors">
+    </div>
+    <div class="card-title">Vapmpire Survivors</div>
   </div>
         </div>
       </div>
@@ -1643,6 +1648,11 @@
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
     <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
+  </div><div class="card game-card" data-index="32" data-folder="Vapmpire Survivors" data-name="vapmpire survivors" onclick="window.location.href='Vapmpire Survivors.html'">
+    <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+      <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors">
+    </div>
+    <div class="card-title">Vapmpire Survivors</div>
   </div>
           </div>
         </div><div class="category" data-category="Horror">
